# semeval-2024

./: .gitignore  README.md  pyproject.toml
artifacts/: __init__.py
artifacts/semeval/: __init__.py  dev.json  semeval-data.md  train.json
data/: chat_messages  most_frequent_words  prediction  reformulate  result_samples  topstories  topstory_ids
notebooks/: exploratory.ipynb
semeval/: __init__.py  output_parser.py  prompt_manager.py  semeval_dataset.py  semeval_metrics.py  semeval_schemas.py
semeval/assets/: chunk_processing.py  data_processing.py  dataset_asset.py  llm_test.py  reformulate_and_predict.py  synthetic_cot_zeroshot.py
semeval/jobs/: __init__.py
semeval/prompt_templates/: chainofthought.prompt  chainofthoughts.py  fewshots.prompt  fewshots.py  labels.py  opro.prompt  opro.py  reformulation.prompt  zeroshot.prompt  zeroshot.py
semeval/resources/: __init__.py  llm_resource.py
tutorial/: __init__.py  assets.py
