[tool.poetry]
name = "semeval"
version = "0.1.0"
description = "Dagster tuto"
authors = ["Clément Brutti-Mairesse <clement.bruttimairesse@unicancer.fr>"]
license = "MIT"
readme = "README.md"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dagster = "^1.6.5"
dagster-duckdb-pandas = "^0.22.5"
dagster-duckdb = "^0.22.5"
dagster-cloud = "^1.6.5"
matplotlib = "^3.8.3"
requests = "^2.31.0"
pip-system-certs = "^4.0"
pandas = "<2.1"
faker = "18.4.0"
dagster-webserver = "^1.6.5"
together = "^0.2.11"
torch = "^2.2.1"
retrying = "^1.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "semeval"
